--- a/basedare/package.json
+++ b/basedare/package.json
@@ -18,6 +18,7 @@
     "@fontsource/jetbrains-mono": "^5.2.8",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^5.2.2",
+    "@hyperbrowser/sdk": "^0.83.3",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -42,6 +43,7 @@
     "next-auth": "^4.24.13",
     "ogl": "^1.0.11",
     "pinata": "^2.5.2",
+    "puppeteer-core": "^24.37.5",
     "qrcode.react": "^4.2.0",
     "react": "19.2.1",
     "react-day-picker": "^9.12.0",
